--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A polyfill for http://www.w3.org/TR/eventsource/ ",
   "main": "eventsource.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "grunt"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Yaffle/EventSource",
   "devDependencies": {
     "grunt": "^0.4.4",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-uglify": "~0.2.4"
   }
 }
