Change npm name now that it's not a polyfill

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "event-source-polyfill",
+  "name": "event-source",
   "version": "0.0.7",
-  "description": "A polyfill for http://www.w3.org/TR/eventsource/ ",
   "main": "eventsource.js",
   "scripts": {
     "build": "grunt"
