fix: update readme and package.json

--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "event-source",
+  "name": "ng-event-source",
   "version": "1.0.0",
   "main": "eventsource.js",
   "typings": "typings.d.ts",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Yaffle/EventSource.git"
+    "url": "git://github.com/sguiheux/EventSource.git"
   },
   "keywords": [
     "sse",
     "server sent events",
     "eventsource",
     "event-source",
-    "polyfill"
+    "polyfill",
+    "angular",
+    "webpack"
   ],
-  "author": "Yaffle (https://github.com/Yaffle)",
+  "author": "Steven Guiheux (https://github.com/sguiheux)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Yaffle/EventSource/issues"
+    "url": "https://github.com/sguiheux/EventSource/issues"
   },
-  "homepage": "https://github.com/Yaffle/EventSource"
+  "homepage": "https://github.com/sguiheux/EventSource"
 }
