update keyword + add npm install

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-event-source",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "eventsource.js",
   "typings": "typings.d.ts",
   "repository": {
@@ -14,6 +14,9 @@
     "event-source",
     "polyfill",
     "angular",
+    "angular2",
+    "angular 2",
+    "angular 4",
     "webpack"
   ],
   "author": "Steven Guiheux (https://github.com/sguiheux)",
